--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@gorhom/bottom-sheet": "^4",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
